--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="contato">Contato</div>
     <div class="profissional">Profissional</div>
     <script src="js/main.js"></script>
-    
+    <div classe="novaaba"> </div>
     
 
 </body>
